# rusty-advisor

./: .gitignore  Cargo.toml  Dockerfile  README.md
config/: default.toml
src/: lib.rs  main.rs  settings.rs
src/collectors/: mod.rs
src/collectors/hiccups_collector/: hiccup_monitor.rs  hiccup_settings.rs  mod.rs
src/errors/: mod.rs
src/exporters/: metrics_exporter.rs  mod.rs
src/exporters/prometheus_exporter/: mod.rs  prometheus_encoder.rs  prometheus_reporter.rs  prometheus_settings.rs
src/exporters/prometheus_exporter/metrics/: mod.rs  prometheus_counter.rs  prometheus_histogram.rs
src/metrics/: histogram.rs  measurement_unit.rs  metric.rs  mod.rs  registry.rs
src/settings/: config_loader.rs  mod.rs
src/utils/: mod.rs  tests.rs  time.rs
