[package]
name = "rusty-advisor"
version = "0.1.0"
authors = ["cspinetta <cebspinetta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus = "0.8"
hyper = "0.13"
tokio = { version = "0.2", features = ["macros"] }
getopts = "0.2"
hdrhistogram = "7.0.0"
