[package]
name = "rusty-advisor"
version = "0.1.0"
authors = ["dpsoft <diegolparra@gmail.com>", "cspinetta <cebspinetta@gmail.com>"]
edition = "2018"

[dependencies]
prometheus = "0.8"
hyper = "0.13"
tokio = { version = "0.2", features = ["macros"] }
getopts = "0.2"
hdrhistogram = "7.0.0"
lazy_static = "1.4.0"
config = "0.10.1"
serde = "1.0.8"
serde_derive = "1.0.8"
toml = "0.5"
log = "0.4"
pretty_env_logger = "0.4"
